# pyXenium

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish-conda-channel.yml  release.yml  test.yml  testpypi.yml
benchmarking/bmnet_pdc/: README.md
benchmarking/bmnet_pdc/envs/: pyx-bmnet-pdc.yml
benchmarking/bmnet_pdc/scripts/: bootstrap_pdc_env.sh  run_bmnet_morphology_increment.py  run_pdc_bmnet_pilot.sh  submit_pdc_bmnet_pilot.sh
benchmarking/cci_2026_atera/: README.md
benchmarking/cci_2026_atera/a100_validation_collected/: README.md
benchmarking/cci_2026_atera/configs/: benchmark.yaml  datasets.yaml  methods.yaml  publication_readiness.yaml
benchmarking/cci_2026_atera/envs/: bootstrap_env.py  pyx-cci-cellagentchat.yml  pyx-cci-cellnest.yml  pyx-cci-cellphonedb.yml  pyx-cci-commot.yml  (+12 more)
benchmarking/gmi_atera/: README.md
benchmarking/gmi_pdc/: README.md
benchmarking/lazyslide_a100/: README.md
benchmarking/lr_2026_atera/: README.md
benchmarking/mechanostress_pdc/: README.md
benchmarking/morphopathway_atera/: EVIDENCE_TO_CLAIM_MAP.md  README.md  SAFE_COMMIT_SCOPE.md
conda-recipe/: README.md  meta.yaml
docs/: changelog.md  conf.py  index.md  quickstart.md  requirements.txt  usage.md
docs/_static/: pyxenium.css
docs/api/: analysis_protein_gene_correlation.md  cci.md  contour.md  gmi.md  index.md  io.md  ligand_receptor.md  mechanostress.md  multimodal.md  pathway.md  perturb.md
docs/examples/: partial_xenium_loader.md
docs/guides/: atera-wta-breast-topology.md  contour-density.md  gmi-contour.md  protein-gene-correlation.md  xenium-data-loading.md
docs/scverse/: pyxenium-ecosystem-pr.md  pyxenium-meta.yaml
docs/tutorials/: ai_driven_spatial_pathologist.md  cci_benchmarking.md  cci_index.md  contour.ipynb  contour_boundary_ecology.ipynb  contour_index.md  contour_s1_s5_breast.ipynb  gmi.md  gmi_index.md  gmi_spatial_modules.md  index.md  io.ipynb  ligand_receptor_benchmarking.md  ligand_receptor_index.md  mechanostress_atera_pdc.ipynb  multimodal.ipynb  multimodal.md  multimodal_bmnet_he_morphology_pdc.md  multimodal_histoseg_lazyslide_breast_wta.md  multimodal_renal_rna_protein.ipynb  multimodal_rna_contour_he.ipynb  pathway.ipynb  spatialperturb_bridge.md
docs/usage/: load_partial.md
docs/user-guide/: index.md  multimodal-overview.md  nine-feature-overview.md
docs/workflows/: atera-breast-contour.md  atera-contour-boundary-ecology.md  atera-contour-gmi.md  atera-wta-breast-cci-benchmark.md  atera-wta-breast-lr-benchmark.md  atera-wta-breast-topology.md  index.md  renal-multimodal.md
examples/: atera_wta_breast_topology.py  audit_xenium_tree.py  renal_immune_resistance_pilot.py  smoke_test_10x_renal_ffpe_protein.py
manuscript/: availability_and_implementation_paragraph.md  bioinformatics_application_note_draft.md  cover_note.md  figure_legends.md  figure_plan.md
manuscript/atera_contour_boundary_ecology/: atera_tutorial_contour_subset.geojson  contour_features.csv  ecotype_assignments.csv  edge_gradients.csv  hypothesis_ranking.csv  matched_exemplars.csv  morphology_omics.csv  program_feature_deltas.csv  program_scores.csv  report.md  summary.json
manuscript/atera_wta_breast_topology/: cci_sender_receiver_scores.csv  ligand_to_cell.csv  lr_component_diagnostics.csv  pathway_activity_structuremap.csv  pathway_activity_to_cell.csv  pathway_mode_comparison.csv  pathway_structuremap.csv  pathway_to_cell.csv  receptor_to_cell.csv  report.md  summary.json
manuscript/code/: atera_wta_breast_topology.ipynb
manuscript/evidence/: loader_auto_structure.json  partial_loader_mex_only.json  pytest_q.txt
manuscript/figures/: make_figure1.py
manuscript/mtm_wta_nbt_replication/: NBT_scientific_strengthening_plan_20260516.md  NBT_strengthening_QA_20260517.md  README.md  build_nbt_strengthening_candidates.py  build_processed_data_archive.py  expected_outputs.md  gene_component_validation_A100_report_20260516.md  morphology_panel_A100_export_summary_20260517.csv  morphology_panel_A100_export_summary_20260517.md  nested_spatial_holdout_A100_summary_20260517.md  package_git_readiness_20260516.md  recompute_main_numbers.py  registration_perturbation_A100_summary_20260517.md  replica_manifest.yaml  run_contour_qc_hero_hardening.py  run_full_replica.ps1  run_full_replica.sh  run_gene_component_validation.py  run_morphology_panel_export.py  run_nbt_strengthening_pipeline.py  run_nested_spatial_holdout.py  run_registration_perturbation.py  run_spatial_sensitivity.py  spatial_sensitivity_A100_summary_20260516.csv  spatial_sensitivity_A100_summary_20260516.md
manuscript/renal_immune_resistance_pilot/: ablation_summary.csv  branch_summary.csv  cohort_metadata_spec.csv  joint_cell_classes.csv  joint_cell_states.csv  marker_discordance.csv  marker_neighborhood_enrichment.csv  panel_gap_recommendations.csv  pathway_discordance.csv  report.md  roi_control_patches.csv  roi_resistant_patches.csv  roi_scores.csv  spatial_niches.csv  summary.json  top_hypotheses.csv
notebook_outputs/spatialdata_browser/: element_summary.csv  protein_embedding_summary.csv
scripts/: run_atera_cervical_post_density_resume.py
src/pyXenium/: __init__.py  __main__.py  _compat.py  _topology_core.py  analysis.py
src/pyxenium/: __main__.py  io.py
tests/: conftest.py  test_backfill.py  test_bmnet_pdc_pilot.py  test_cci_benchmark_cli.py  test_cci_benchmarking.py  test_cli.py  test_contour_boundary_ecology.py  test_contour_module.py  test_contract_schemas.py  test_dataset_catalog.py  test_gmi_module.py  test_gmi_pdc_plan.py  test_lr_benchmark_cli.py  test_lr_benchmarking.py  test_mechanostress_module.py  test_morphology_increment.py  test_morphopathway.py  test_multimodal_bridges.py  test_multimodal_lazyslide_structure.py  test_multimodal_module.py  test_pdc_benchmark_scripts.py  test_smoke_end_to_end.py  test_spatial_immune_resistance.py  test_spatialperturb_bridge.py  test_tenx_public_slides.py  test_topology_analysis.py  test_validation_cervical_workflow.py  test_validation_module.py  test_xenium_io.py
(+1652 files in other folders)
