[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyXenium"
version = "0.2.0"
description = "Xenium I/O and multimodal RNA+Protein analysis workflows for 10x Xenium data."
readme = "README.md"
requires-python = ">=3.8"
license = "LicenseRef-Proprietary-NonCommercial"
license-files = ["LICENSE"]
authors = [{ name = "Taobo Hu" }]

# 运行时依赖（按你项目真实需要填写；示例）
dependencies = [
  "anndata>=0.10",
  "numpy>=1.23",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "matplotlib>=3.8",
  "shapely>=2.0",
  "tifffile>=2024.8.10",
  "imagecodecs>=2024.6.1",
  "zarr>=3.1",
  "fsspec>=2024.6.0",
  "requests>=2.31",
  "aiohttp",
  "click>=8.1",
]

[project.scripts]
pyxenium = "pyXenium.__main__:main"

[project.optional-dependencies]
docs = [
  "sphinx>=8",
  "pydata-sphinx-theme>=0.16",
  "myst-parser>=4.0",
  "sphinx-design>=0.6",
  "sphinx-copybutton>=0.5",
]

dev = [
  "pytest>=7",
  "pytest-cov",
  "build",
  "twine",
]

[tool.setuptools]
# ★ 明确 src 布局
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
pyXenium = [
  "config/*.yaml",
  "datasets/toy_slide/*.zip",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyXenium*"]
