[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyXenium"
dynamic = ["version"]
description = "Xenium I/O, multimodal analysis, topology workflows, contour-native spatial profiling, GMI inference, and mechanostress analysis."
readme = "README.md"
requires-python = ">=3.8"
license = "LicenseRef-Proprietary-NonCommercial"
license-files = ["LICENSE"]
authors = [{ name = "Taobo Hu" }]
keywords = ["xenium", "spatial-omics", "spatial-transcriptomics", "multimodal", "anndata"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "anndata>=0.10",
  "numpy>=1.23",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "statsmodels>=0.14",
  "scanpy>=1.10",
  "shapely>=2.0",
  "tifffile>=2024.8.10",
  "imagecodecs>=2024.6.1",
  "zarr>=3.1",
  "fsspec>=2024.6.0",
  "requests>=2.31",
  "PyYAML>=6.0",
  "pyarrow>=14.0",
  "aiohttp",
  "click>=8.1",
]

[project.urls]
Documentation = "https://pyxenium.readthedocs.io/en/latest/"
Source = "https://github.com/hutaobo/pyXenium"
Issues = "https://github.com/hutaobo/pyXenium/issues"
Changelog = "https://pyxenium.readthedocs.io/en/latest/changelog.html"
Releases = "https://github.com/hutaobo/pyXenium/releases"

[project.scripts]
pyxenium = "pyXenium.__main__:main"

[project.optional-dependencies]
docs = [
  "sphinx>=8",
  "pydata-sphinx-theme>=0.16",
  "myst-parser>=4.0",
  "myst-nb>=1.1",
  "sphinx-design>=0.6",
  "sphinx-copybutton>=0.5",
  "ipykernel>=6.29",
  "nbclient>=0.10",
  "nbformat>=5.10",
]

dev = [
  "pytest>=7",
  "pytest-cov",
  "build",
  "twine",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pyXenium._version.__version__"}

[tool.setuptools.package-data]
pyXenium = [
  "config/*.yaml",
  "datasets/toy_slide/*.zip",
  "notebooks/*.ipynb",
  "_vendor/Gmi/*",
  "_vendor/Gmi/.*",
  "_vendor/Gmi/.github/*",
  "_vendor/Gmi/.github/workflows/*",
  "_vendor/Gmi/R/*",
  "_vendor/Gmi/man/*",
  "_vendor/Gmi/man/figures/*",
  "_vendor/Gmi/renv/*",
  "_vendor/Gmi/src/*",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyXenium*"]
